@@ -4,76 +4,47 @@
 # make-3.79.1 does not support $$@ as target requirement (works for make-3.80)
 
 # preliminaries:
-# Adamantix modifies the specs adding etexec/etdyn for ET_EXEC/ET_DYN binaries
-# Adamantix's behaviour is presumed (no answers from peter@adamantix)
-# Gentoo modifies the specs adding yet_dyn/pie|yet_exec/nopie to enable|disable ET_DYN binaries
-#
-# disable ET_DYN binary building explicitely, where needed by setting
-# Adamantix: etexec
-# Gentoo: nopie/yet_exec
-
-# gcc does not check correctly -y<something>, so we have to grep the specs file
-
-# Gentoo used this to have non ET_DYN behaviour
-# not working anymore w/ gcc-3.3.3-r1, since we do not know the defaults
-#GCC_SPCS := $(shell gcc -dumpspecs > dumpspecs)
-#CC := gcc -specs=dumpspecs
+# Gentoo modifies the specs adding pie/nopie to enable/disable ET_DYN binaries
 
 CC := gcc
-CC_PIC := -fPIC -DPIC
+LD := ld
+CC_PIC := -fPIC
+GCC_SPCS := $(shell $(CC) -print-file-name=${GCC_SPECS:-specs})
 
-# Adamantix
-CC_PIE := $(shell if grep -q "etdyn" `gcc -print-file-name=specs` ; then echo "-etdyn"; fi)
-CC_ETEXEC := $(shell if grep -q "etexec" `gcc -print-file-name=specs` ; then echo "-etexec"; fi)
+check_gcc = $(shell if $(CC) $(1) -S -o /dev/null -xc /dev/null > /dev/null 2>&1; \
+	then echo "$(1)"; else echo "$(2)"; fi)
 
-# non Adamantix case
-ifneq ($(CC_ETEXEC),-etexec)
+check_as = $(shell if $(CC) -Wa,$(1) -Wa,-Z -c -o /dev/null -xassembler /dev/null > /dev/null 2>&1; \
+	then echo "-Wa,$(1)"; fi)
 
-SCRT_FILE := $(shell if test -r /usr/lib/crt1S.o; then echo "/usr/lib/crt1S.o"; fi)
-ifeq ($(SCRT_FILE),)
-SCRT_FILE := $(shell if test -r /usr/lib/Scrt1.o; then echo "/usr/lib/Scrt1.o"; fi)
-endif
-# we can use -pie only if /usr/lib/Scrt1.o exists
+# stack protector has to be disabled for some tests
+CC_SSP := $(call check_gcc,-fno-stack-protector,)
+CC_SSP += $(call check_gcc,-fno-stack-protector-all,)
+
+ASFLAGS := $(call check_as,--noexecstack)
+
+CC_PIE := $(call check_gcc,-fPIE,-fPIC)
+
+CC_TRAMPOLINES := $(call check_gcc,-ftrampolines,)
+
+SCRT_FILE = $(shell if test -r /usr/lib/Scrt1.o ; then echo "/usr/lib/Scrt1.o"; fi)
+
 ifneq ($(SCRT_FILE),)
-# test works only for -fpie, not -pie, why?
-CC_PIE := $(shell if gcc -fpie -S -o /dev/null -xc /dev/null >/dev/null 2>&1; then echo "-pie"; fi)
-
-# Gentoo disabling ET_DYN
-ifeq ($(CC_PIE),-pie)
-CC_ETEXEC := $(shell if grep -q "\!nopie" `gcc -print-file-name=specs` ; then echo "-nopie"; fi)
+LD_PIE = $(shell $(LD) --help | grep -q pie && echo "-pie")
+ifneq ($(LD_PIE),)
+# Gentoo (hardened specs enabled)
+CC_ETEXEC = $(shell grep -q "\!nopie" $(GCC_SPCS) && echo "-nopie")
+LD_ETEXEC = $(CC_ETEXEC)
 endif
-endif
-
-ifeq ($(CC_PIE),)
-# Gentoo creating ET_DYN (if defaulting to ET_EXEC)
-CC_PIE := $(shell if grep -q "yet_dyn" `gcc -print-file-name=specs` ; then echo "-yet_dyn"; fi)
-# Gentoo disabling ET_DYN (if defaulting to ET_DYN)
-CC_ETEXEC := $(shell if grep -q "yet_exec" `gcc -print-file-name=specs` ; then echo "-yet_exec"; fi)
-
-# generic case, if we do not have any reference in specs
-ifeq ($(CC_PIE),)
-# if we have an Scrt1.o file, use that instead of the locally built one
-# could someone test this on platforms, where Scrt1.o exists, but there
-# is no equivalent crt1S.S? At least it works for uClibc.
-ifeq ($(SCRT_FILE),)
-SCRT_FILE := crt1S.o
+else
+# generic, local version
+SCRT_FILE = crt1S.o
 endif
 
-CC_PIE := -shared
-PAX_DEP := $(SCRT_FILE) interp.o
-
-# end of generic
+ifeq ($(LD_PIE),)
+LD_PIE = -shared
+PAX_DEP = $(SCRT_FILE) interp.o
 endif
-
-# end of Gentoo
-endif
-
-# end of non-Adamantix case
-endif
-
-# check for stack-protector
-CC_SSP := $(shell if gcc -fno-stack-protector -S -o /dev/null -xc /dev/null >/dev/null 2>&1; then echo "-fno-stack-protector"; fi)
-CC_SSP_ALL := $(shell if gcc -fno-stack-protector-all -S -o /dev/null -xc /dev/null >/dev/null 2>&1; then echo "-fno-stack-protector-all"; fi)
 
 # check for installed binaries
 CHPAXBIN := $(shell if which chpax >/dev/null 2>&1 ; then echo chpax; fi)
@@ -86,7 +57,8 @@ ifneq ($(PAXCTLBIN),)
 DUMMY := $(shell echo '${PAXCTLBIN} $$*' > paxbin)
 endif
 
-OPT_FLAGS  := -O2
+# for some reason the .c files need it, else GNU_STACK=RWE
+OPT_FLAGS  := -O2 $(ASFLAGS)
 PTHREAD := -lpthread
 # define stripping of binaries/libs here, or set these on make's commandline,
 # else you'll loose the chpax flags!
@@ -99,7 +71,7 @@ endif
 # The Hardened GCC compiler has stack protector on by default, this
 # could interfere with the results of this test.
 
-CFLAGS	:= $(OPT_FLAGS) -DRUNDIR=\"${RUNDIR}\" $(CC_SSP) $(CC_SSP_ALL)
+CFLAGS	:= $(OPT_FLAGS) -DRUNDIR=\"${RUNDIR}\" $(CC_SSP) $(CC_TRAMPOLINES)
 
 EXEC_TESTS = anonmap execbss execdata execheap execstack
 MPROT_TESTS = mprotanon mprotbss mprotdata mprotheap mprotstack
@@ -156,7 +128,7 @@ paxtest: $(TESTS) genpaxtest
 	sh genpaxtest $(TESTS)
 
 .S.o:
-	$(CC) $(CFLAGS) $(CC_PIC) -o $@ -c $<
+	$(CC) $(CFLAGS) $(CC_PIE) $(ASFLAGS) -o $@ -c $<
 .c.o:
 	$(CC) $(CFLAGS) -o $@ -c $<
 
@@ -177,19 +149,19 @@ get%1.o: get%.c
 
 # get heap2/main2 are built w/ PIC
 get%2.o: get%.c
-	$(CC) $(CFLAGS) $(CC_PIC) -o $@ -c $<
+	$(CC) $(CFLAGS) $(CC_PIE) -o $@ -c $<
 	
 # Adamantix uses the PIC version (getheap2.o), not necessary for ET_EXEC
 # build as ET_EXEC (not in Adamantix's Makefile)
 getheap1: getheap1.o
-	$(CC) $(LDFLAGS) $(CC_ETEXEC) -o $@ $<
+	$(CC) $(LDFLAGS) $(LD_ETEXEC) -o $@ $<
 
 getmain1: getmain1.o
-	$(CC) $(LDFLAGS) $(CC_ETEXEC) -o $@ $<
+	$(CC) $(LDFLAGS) $(LD_ETEXEC) -o $@ $<
 	$(PAXBIN) -SPRXM $@
 
 getheap2 getmain2: $(PAX_DEP) getheap2.o getmain2.o
-	$(CC) $(LDFLAGS) $(CC_PIE) -o $@ $(PAX_DEP) $@.o || (echo -e "#!/bin/sh\necho $@ pie not implemented" > $@; chmod +x $@)
+	$(CC) $(LDFLAGS) $(LD_PIE) -o $@ $(PAX_DEP) $@.o || (echo -e "#!/bin/sh\necho $@ pie not implemented" > $@; chmod +x $@)
 
 getshlib: getshlib.o
 	$(CC) $(LDFLAGS) -o $@ $< $(DL)
@@ -217,12 +189,12 @@ retbody.o: body.c
 # build as ET_EXEC (recommended by PaX Team, not really a requirement)
 $(RET_TESTS): retbody.o
 	$(CC) $(CFLAGS) $(CC_ETEXEC) -o $@.o -c $@.c
-	$(CC) $(LDFLAGS) $(CC_ETEXEC) $(PTHREAD) -o $@ $< $@.o
+	$(CC) $(LDFLAGS) $(LD_ETEXEC) $(PTHREAD) -o $@ $< $@.o
 
 # build as ET_EXEC (not in Adamantix's Makefile)
 $(RETX_TESTS): retbody.o
 	$(CC) $(CFLAGS) $(CC_ETEXEC) -o $@.o -c $@.c
-	$(CC) $(LDFLAGS) $(CC_ETEXEC) $(PTHREAD) -o $@ $< $@.o
+	$(CC) $(LDFLAGS) $(LD_ETEXEC) $(PTHREAD) -o $@ $< $@.o
 	$(PAXBIN) -SPXM $@
 	
 # should also shlibbss.o and shlibdata.o be built w/ PIC?
