@@ -12,6 +12,7 @@
 /* OpenBSD 3.5 doesn't define RTLD_DEFAULT */
 /* OpenBSD 3.6 does but it doesn't actually handle (segfaults on) RTLD_DEFAULT, sigh... */
 #ifdef __OpenBSD__
+#undef RTLD_DEFAULT
 #define RTLD_DEFAULT "libc.so"
 #endif
 
