@@ -19,23 +19,31 @@ static char *shbss, *shbss2;
 void doit( void )
 {
 	fptr func;
-	void *handle;
+	void *handle1, *handle2;
 
-	handle = dlopen( "shlibtest.so", RTLD_LAZY );
-	if( handle == NULL ) {
+	handle1 = dlopen( "shlibtest.so", RTLD_LAZY );
+	if( handle1 == NULL ) {
 		fprintf( stderr, "dlopen() returned NULL\n" );
 		exit( 1 );
 	}
-	shbss = dlsym( handle, "shbss" );
-	dlclose( handle );
+	dlerror(); /* clear any errors */
+	shbss = dlsym( handle1, "shbss" );
+	if( dlerror() != NULL ) {
+		fprintf( stderr, "symbol %s not found in %s\n", "shbss", "shlibtest.so" );
+		exit( 1 );
+	}
 
-	handle = dlopen( "shlibtest2.so", RTLD_LAZY );
-	if( handle == NULL ) {
+	handle2 = dlopen( "shlibtest2.so", RTLD_LAZY );
+	if( handle2 == NULL ) {
 		fprintf( stderr, "dlopen() returned NULL\n" );
 		exit( 1 );
 	}
-	shbss2 = dlsym( handle, "shbss2" );
-	dlclose( handle );
+	dlerror(); /* clear any errors */
+	shbss2 = dlsym( handle2, "shbss2" );
+	if( dlerror() != NULL ) {
+		fprintf( stderr, "symbol %s not found in %s\n", "shbss2", "shlibtest2.so" );
+		exit( 1 );
+	}
 
 	/* Put a RETN instruction in the buffer */
 	*shbss = '\xc3';
@@ -49,4 +57,7 @@ void doit( void )
 
 	/* It worked when the function returns */
 	itworked();
+
+	dlclose( handle1 );
+	dlclose( handle2 );
 }
